Report user with captcha

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -85,9 +85,10 @@ svg {
 	width: 100%;
 }
 
-.button svg {
+.button.icon-and-text svg {
 	margin-right: 4px;
 }
+
 input[type=range].slider {
 	margin: initial;
 }
