--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -138,11 +138,11 @@
 						th:onclick="viewProfile([[${user.idEncoded}]])">View
 						profile</button>
 					<div class="right">
-						<button class="button is-rounded is-danger"
+						<button class="button colored is-rounded is-danger"
 							th:onclick="hideUser(this, [[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-down"></i>
 						</button>
-						<button class="button is-rounded is-success"
+						<button class="button colored is-rounded is-success"
 							th:onclick="likeUser(this, [[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-up"></i>
 						</button>
@@ -201,11 +201,11 @@
 						th:onclick="viewProfile([[${user.idEncoded}]])">View
 						profile</button>
 					<div class="right">
-						<button class="button is-rounded is-danger"
+						<button class="button colored is-rounded is-danger"
 							th:onclick="hideUser(this, [[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-down"></i>
 						</button>
-						<button class="button is-rounded is-success"
+						<button class="button colored is-rounded is-success"
 							th:onclick="likeUser(this, [[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-up"></i>
 						</button>
