--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -44,7 +44,7 @@
 				<div>
 
 					<label class="label">Search</label>
-					<button class="button is-info" onclick="search()">
+					<button class="button colored is-info" onclick="search()">
 						<i class="fa fa-search"></i>
 					</button>
 				</div>
