--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -29,9 +29,10 @@
 				</div>
 			</div>
 
+			<div style="padding-top: 24px;"></div>
 			<div class="container">
 				<section class="container" id="main-container"></section>
-				<a class="button is-primary" style="width: 100%;" href="/donate-list"><i class="fa fa-hand-holding-usd"></i>Donate Now</a>
+				<a class="button colored is-primary" style="width: 100%;" href="/donate-list"><i class="fa fa-hand-holding-usd" style="padding-right: 4px;"></i>Donate Now</a>
 			</div>
 		</div>
 
