--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -23,13 +23,9 @@
 					<div class="columns is-mobile is-centered">
 						<div class="column is-half center-children">
 
-							<img id="profilePicture" src="/img/profile.jpg"
-								style="cursor: pointer;" height=400 width="400"
-								th:unless="${user.profilePicture}" /> <img id="profilePicture"
-								style="cursor: pointer;" height=400 width="400"
-								th:if="${user.profilePicture}" th:src="${user.profilePicture}" />
-							<input id="profilePictureUpload" type="file" accept="image/*"
-								style="display: none">
+							<img id="profilePicture" style="cursor: pointer;" height=400
+								width="400" th:if="${user.profilePicture}"
+								th:src="${user.profilePicture}" />
 						</div>
 					</div>
 				</div>
@@ -96,37 +92,76 @@
 				<div class="profile-bottom full-width"
 					style="display: inline-block;">
 					<div class="left">
-						<button class="button is-rounded is-danger" th:unless="${user.blockedByCurrentUser}"
+						<button class="button colored is-rounded is-danger"
+							th:unless="${user.blockedByCurrentUser}"
 							th:onclick="blockUser([[${user.idEncoded}]])">
 							<i class="fa fa-ban"></i>
 						</button>
-						<button class="button is-rounded is-success" th:if="${user.blockedByCurrentUser}"
+						<button class="button colored is-rounded is-success"
+							th:if="${user.blockedByCurrentUser}"
 							th:onclick="unblockUser([[${user.idEncoded}]])">
 							<i class="fa fa-ban"></i>
 						</button>
-						<button class="button is-rounded is-info" th:unless="${user.reportedByCurrentUser}"
-							th:onclick="reportUser([[${user.idEncoded}]])">
+						<button class="button colored is-rounded is-info"
+							th:unless="${user.reportedByCurrentUser}"
+							th:onclick="reportUser()">
 							<i class="fa fa-flag"></i>
 						</button>
 					</div>
 					<div class="right">
-						<button class="button is-rounded is-danger" th:unless="${user.hiddenByCurrentUser or user.likedByCurrentUser}"
+						<button class="button colored is-rounded is-danger"
+							th:unless="${user.hiddenByCurrentUser or user.likedByCurrentUser}"
 							th:onclick="hideUser([[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-down"></i>
 						</button>
-						<button class="button is-rounded is-danger" th:if="${user.hiddenByCurrentUser or user.likedByCurrentUser}"
+						<button class="button colored is-rounded is-danger"
+							th:if="${user.hiddenByCurrentUser or user.likedByCurrentUser}"
 							th:onclick="hideUser([[${user.idEncoded}]])" disabled>
 							<i class="fa fa-thumbs-down"></i>
 						</button>
-						<button class="button is-rounded is-success" th:unless="${user.likedByCurrentUser}"
+						<button class="button colored is-rounded is-success"
+							th:unless="${user.likedByCurrentUser}"
 							th:onclick="likeUser([[${user.idEncoded}]])">
 							<i class="fa fa-thumbs-up"></i>
 						</button>
-						<button class="button is-rounded is-success" th:if="${user.likedByCurrentUser}"
+						<button class="button colored is-rounded is-success"
+							th:if="${user.likedByCurrentUser}"
 							th:onclick="likeUser([[${user.idEncoded}]])" disabled>
 							<i class="fa fa-thumbs-up"></i>
 						</button>
 					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div id="modals">
+		<div class="modal" id="report-user-modal">
+			<div class="modal-background" onclick="closeModal()"></div>
+			<div class="modal-content">
+				<div class="box">
+					<div style="margin-bottom:24px">Report user for violating the ToS? Examples: NSFW
+						profile picture or impersonation.</div>
+						
+						<div class="field">
+							<input id="captcha-id" name="captchaId" type="hidden">
+							<input id="id-enc" type="hidden" name="id" th:value="${user.idEncoded}">
+
+							<div class="field">
+								<img id="captcha-image">
+								<button type="button" class="button" onclick="refreshCaptcha()"
+									style="height: 70px; width: 70px; font-size: 1.7rem; margin-left: 12px;">
+									<i class="fa fa-sync"></i>
+								</button>
+							</div>
+							<div class="field">
+								<input class="input" id="captcha" name="captchaText" placeholder="Captcha"
+									autocomplete="off" required>
+							</div>
+							<div class="field" style="height: 42px">
+								<button class="button is-info" style="float: right" th:onclick="reportUserSubmit([[${user.idEncoded}]])">Submit</button>
+							</div>
+						</div>
 				</div>
 			</div>
 		</div>
@@ -137,6 +172,8 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/refreshCaptcha.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/userProfile.js"></script>
 </body>
 </html>
