Fixed links index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
 				function properly. Your data is safe with us, as we don't store any
 				personal information in the cookies nor do we send any information
 				to a third party. By continuing to use this site you agree to the
-				use of cookies. <a href="#">Click here to learn more</a>
+				use of cookies. <a href="/privacy#cookies">Click here to learn more</a>
 
 			</div>
 		</div>
@@ -57,7 +57,7 @@
 									solely rely on your generous donations to keep this platform
 									running.</p>
 								<p>
-									<a href="#">Donate</a>
+									<a href="/donate-list">Donate</a>
 								</p>
 							</div>
 						</div>
@@ -76,7 +76,7 @@
 									allowing everyone to view and improve on the platform if they
 									so desire.</p>
 								<p>
-									<a href="#">Source code</a>
+									<a href="https://github.com/Alovoa/alovoa">Source code</a>
 								</p>
 							</div>
 						</div>
