--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -4,7 +4,7 @@
 	<div th:fragment="header">
 		<nav class="navbar is-info">
 			<div class="navbar-brand">
-				<a class="navbar-item" href="/"> <img src="img/icon.png"
+				<a class="navbar-item" href="/"> <img src="/img/icon.png"
 					width="40" height="40">
 				</a> <a class="navbar-item" href="/" id="navbar-text">Alovoa </a>
 			</div>
