--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -10,7 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<title>Login</title>
+<title>Reset password</title>
 </head>
 <body>
 	<div id="main">
@@ -18,21 +18,13 @@
 		<div class="section">
 			<div class="container">
 				<div class="column">
-					<h3 class="title">Login</h3>
-					<p class="subtitle">Please login to proceed.</p>
+					<h3 class="title">Reset password</h3>
 					<div class="box">
-						<form th:action="@{/login}" method="POST">
+						<form th:action="@{/password/reset}" method="POST" id="form">
 							<div class="field">
 								<div class="control">
-									<input class="input" type="email" placeholder="Your Email"
-										autofocus="" name="username">
-								</div>
-							</div>
-
-							<div class="field">
-								<div class="control">
-									<input class="input" type="password"
-										placeholder="Your Password" name="password">
+									<input class="input" type="email" placeholder="Email address"
+										autofocus="" name="email" id="email" required>
 								</div>
 							</div>
 							<div class="field">
@@ -50,29 +42,19 @@
 										placeholder="Captcha" autocomplete="off" required>
 								</div>
 							</div>
-							<!-- TODO: Causes exception 
-							<div class="field">
-								<label class="checkbox"> <input type="checkbox"
-									name="remember-me"> Remember me
-								</label>
-							</div>
-							-->
-							<button class="button">Login</button>
+							<button class="button">Submit</button>
 						</form>
 					</div>
-
-					<p>
-						<a href="/password/reset">Forgot Password</a>
-					</p>
 				</div>
 			</div>
 		</div>
 	</div>
+
 	<footer th:replace="fragments.html::footer"></footer>
 
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
-	<script src="/js/login.js"></script>
+	<script src="/js/password-reset.js"></script>
 </body>
 </html>
