--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -148,6 +148,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-calendar.min.js"></script>
 	<script src="/js/tools/refreshCaptcha.js"></script>
+	<script src="/js/tools/checkPassword.js"></script>
 	
 	<script src="/js/register.js"></script>
 
