Several qol improvements

--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -32,7 +32,7 @@
 			<div style="padding-top: 24px;"></div>
 			<div class="container">
 				<section class="container" id="main-container"></section>
-				<a class="button colored is-primary" style="width: 100%;" href="/donate-list"><i class="fa fa-hand-holding-usd" style="padding-right: 4px;"></i>Donate Now</a>
+				<a class="button colored is-primary" style="width: 100%;" href="/donate-list" target="_blank"><i class="fa fa-hand-holding-usd" style="padding-right: 4px;"></i>Donate Now</a>
 			</div>
 		</div>
 
