--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -12,6 +12,7 @@
 <link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
+<link rel="stylesheet" href="/css/profile.css" />
 <title>Profile</title>
 </head>
 <body>
