--- a/src/main/resources/templates/messageDetail.html
+++ b/src/main/resources/templates/messageDetail.html
@@ -31,9 +31,13 @@
 			</div>
 			<div class="section">
 				<div class="container" style="width: 100%;" id="message-send-div">
-					 <input class="input is-medium is-rounded" type="text" id="message-send-input" placeholder="...">
-					 <div id="message-send-padding"></div>
-					 <button class="button is-info is-medium is-rounded" id="message-send-button" onclick="sendMessage()"><i class="fa fa-paper-plane"></i></button>
+					<input class="input is-medium is-rounded" type="text"
+						id="message-send-input" placeholder="...">
+					<div id="message-send-padding"></div>
+					<button class="button is-info is-medium is-rounded"
+						id="message-send-button" onclick="sendMessage()">
+						<i class="fa fa-paper-plane"></i>
+					</button>
 				</div>
 			</div>
 		</section>
@@ -44,6 +48,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/messageDetail.js"></script>
 </body>
 </html>
