--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -114,6 +114,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/profile.js"></script>
 </body>
 </html>
