--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -51,8 +51,7 @@
 			</div>
 		</div>
 
-		<section class="container" id="main-container">
-		</section>
+		<section class="container" id="main-container"></section>
 	</div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
@@ -60,6 +59,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 </html>
