--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -44,6 +44,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/donate.js"></script>
 </body>
 </html>
