--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 	<div id="main-logged-in">
-		<header th:insert="fragments.html::header-logged-in"></header>
+		<header th:insert="fragments.html::header"></header>
 		<div class="section">
 			<div class="container">
 				<a class="button is-primary" style="width: 100%;"><i
