Initial support for PWA

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/json/manifest.json">
+<meta name="theme-color" content="#3298DC"/>
+<link rel="manifest" href="/manifest.json">
+<link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
@@ -42,7 +44,7 @@
 			<img id="banner">
 		</div>
 
-		<section class="container">
+		<section class="container cards">
 			<div class="columns features">
 				<div class="column is-4">
 					<div class="card is-shady">
@@ -103,7 +105,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="container">
+		<section class="container cards">
 			<div class="columns features">
 				<div class="column is-4">
 					<div class="card is-shady">
@@ -175,6 +177,7 @@
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/sw.js"></script>
 	<script src="/js/index.js"></script>
 </body>
 
